# uniOCR

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md
.github/workflows/: publish.yml  test.yml
benches/: apple_leak_bench.rs  ocr_benchmark.rs
examples/: basic.rs  batch_processing.rs  custom_options.rs  platform_specific.rs  screen_capture.rs
src/: apple.rs  custom_ocr.rs  language.rs  lib.rs  tesseract.rs
tests/: apple_vision_test.rs  custom_ocr_test.rs  tesseract_test.rs  windows_vision_test.rs
