[package]
name = "uni-ocr"
version = "0.1.5"
authors = ["mediar-ai"]
description = "Native OCR for MacOS, Windows, Linux"
repository = "https://github.com/mediar-ai/uniOCR"
license = "MIT"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0"

# async
tokio = { version = "1.41.1", features = ["full"] }

# Image processing
image = "0.25.2"

# OCR
rusty-tesseract = "1.1.10"

anyhow = "1.0.86"



tracing = "0.1"

base64 = "0.22.1"

reqwest = { version = "0.12.11", features = ["json"] }

[dev-dependencies]
tempfile = "3.3.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
strsim = "0.11.1"
memory-stats = "1.2.0"

# websocket example
futures-util = "0.3"
tokio-tungstenite = "0.26.2"
serde = "1.0.200"
xcap = "0.4.1"

[package.metadata.osx]
framework = ["Vision", "AppKit"]

[[bench]]
name = "ocr_benchmark"
harness = false

[[bench]]
name = "apple_leak_bench"
harness = false

[[example]]
name = "screen_capture"
path = "examples/screen_capture.rs"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = [
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage",
  "Storage_Streams",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { git = "https://github.com/yury/cidre", version = "0.9.0", default-features = false, features = ["cf", "cg", "cv", "cm", "ns", "objc", "vn", "blocks", "macos_13_0"] }
libc = "^0.2.168"
url = "2.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "^0.2.168"
